--- a/internal/assets/css/style.css
+++ b/internal/assets/css/style.css
@@ -1,3 +1,15 @@
+@font-face {
+    font-family: 'CaskaydiaCove NFM';
+    src: url('/fonts/CaskaydiaCoveNFM-Regular.eot');
+    src: url('/fonts/CaskaydiaCoveNFM-Regular.eot?#iefix') format('embedded-opentype'),
+        url('/fonts/CaskaydiaCoveNFM-Regular.woff2') format('woff2'),
+        url('/fonts/CaskaydiaCoveNFM-Regular.woff') format('woff'),
+        url('/fonts/CaskaydiaCoveNFM-Regular.svg#CaskaydiaCoveNFM-Regular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
 /* CSS Resets */
 * {
   margin: 0;
@@ -39,6 +51,7 @@ table {
 /* Site Styles */
 
 :root {
+  font-family: 'CaskaydiaCove NFM', monospace;
   font-size: 16px;
 }
 
