feat: wip on links

--- a/internal/assets/templates/index.gohtml
+++ b/internal/assets/templates/index.gohtml
@@ -1,12 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Stevan's Links</title>
-    <link href="css/style.css" rel="stylesheet">
-  </head>
-  <body>
-    <h1 class="red">Stevan's Links</h1> 
-  </body>
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Stevan's Links</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+    integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link href="css/style.css" rel="stylesheet">
+</head>
+
+<body>
+  <div class="image-container">
+    <img class="profile-picture" src="https://github.com/StevanFreeborn.png"
+      alt="A man with short brown hair, a grey hoodie, and a white t-shirt smiles at the camera. He has a white earbud in his left ear. The background is a blurred office setting with warm lighting visible through glass partitions." />
+    <div>
+      <h1>Stevan Freeborn</h1>
+      <p>Stuff about me...</p>
+    </div>
+  </div>
+  <nav class="links-container">
+    <ul>
+      <li>
+        <a class="link" href="https://youtube.stevanfreeborn.com">YouTube</a>
+      </li>
+      <li>
+        <a class="link" href="https://github.stevanfreeborn.com">GitHub</a>
+      </li>
+      <li>
+        <a class="link" href="https://blog.stevanfreeborn.com">Blog</a>
+      </li>
+      <li>
+        <a class="link" href="https://linkedin.stevanfreeborn.com">LinkedIn</a>
+      </li>
+    </ul>
+  </nav>
+
+</body>
+
 </html>
