--- a/internal/assets/css/style.css
+++ b/internal/assets/css/style.css
@@ -50,7 +50,16 @@ table {
 
 /* Site Styles */
 
+/* Background: #2C2C2C (slate gray) */
+/* Primary Text: #E4E4E4 (light gray) */
+/* Accent 1: #A8DADC (light cyan) */
+/* Accent 2: #FFC1CC (soft pink) */
+/* Button/CTA: #B39CD0 (lavender) */
+
 :root {
+  --bg-color: #181818;
+  --text-color: #E4E4E4;
+
   font-family: 'CaskaydiaCove NFM', monospace;
   font-size: 16px;
 }
@@ -58,9 +67,54 @@ table {
 html,
 body {
   height: 100%;
+  background-color: var(--bg-color);
+  color: var(--text-color);
 }
 
+body {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  padding: 1rem;
+}
 
+.image-container,
+.links-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.links-container {
+  flex: 1;
+}
+
+.links-container ul {
+  display: flex;
+  flex-direction: column;
+  gap: 0.75rem;
+}
+
+.profile-picture {
+  width: 100px;
+  aspect-ratio: 1 / 1;
+  border-radius: 50%;
+  box-shadow: 8px -4px 14px 4px rgba(0,0,0,0.36), -4px 8px 14px 4px rgba(0,0,0,0.36);
+}
+
+.link {
+  display: flex;
+  padding: 0.25rem 1rem;
+  border-radius: 0.5rem;
+  color: var(--bg-color);
+  background-color: var(--text-color);
+}
+
+@media (hover: hover) {
+  .link:hover {
+    transform: scale(1.02);
+  }
+}
 
 
 
