--- a/internal/assets/css/style.css
+++ b/internal/assets/css/style.css
@@ -74,7 +74,7 @@ body {
 body {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 2rem;
   padding: 1rem;
 }
 
@@ -85,6 +85,20 @@ body {
   align-items: center;
 }
 
+.image-container {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.bio {
+  display: flex;
+  flex-direction: column;
+  gap: 0.25rem;
+  text-align: center;
+  max-width: 40rem;
+}
+
 .links-container {
   flex: 1;
 }
@@ -93,10 +107,12 @@ body {
   display: flex;
   flex-direction: column;
   gap: 0.75rem;
+  width: 100%;
+  max-width: 40rem;
 }
 
 .profile-picture {
-  width: 100px;
+  width: 250px;
   aspect-ratio: 1 / 1;
   border-radius: 50%;
   box-shadow: 8px -4px 14px 4px rgba(0,0,0,0.36), -4px 8px 14px 4px rgba(0,0,0,0.36);
@@ -104,10 +120,13 @@ body {
 
 .link {
   display: flex;
-  padding: 0.25rem 1rem;
+  align-items: center;
+  gap: 0.25rem;
+  padding: 0.5rem 1.5rem;
   border-radius: 0.5rem;
   color: var(--bg-color);
   background-color: var(--text-color);
+  font-size: 1.125rem;
 }
 
 @media (hover: hover) {
