--- a/internal/assets/templates/index.gohtml
+++ b/internal/assets/templates/index.gohtml
@@ -15,24 +15,36 @@
   <div class="image-container">
     <img class="profile-picture" src="https://github.com/StevanFreeborn.png"
       alt="A man with short brown hair, a grey hoodie, and a white t-shirt smiles at the camera. He has a white earbud in his left ear. The background is a blurred office setting with warm lighting visible through glass partitions." />
-    <div>
+    <div class="bio">
       <h1>Stevan Freeborn</h1>
-      <p>Stuff about me...</p>
+      <p>I'm a 32-year old dad of 2 who enjoys drinking coffee, lifting weights, and solving problems with code.</p>
     </div>
   </div>
   <nav class="links-container">
     <ul>
       <li>
-        <a class="link" href="https://youtube.stevanfreeborn.com">YouTube</a>
+        <a class="link" href="https://youtube.stevanfreeborn.com">
+          <i class="fa-brands fa-square-youtube fa-lg"></i>
+          <span>YouTube</span>
+        </a>
       </li>
       <li>
-        <a class="link" href="https://github.stevanfreeborn.com">GitHub</a>
+        <a class="link" href="https://github.stevanfreeborn.com">
+          <i class="fa-brands fa-square-github fa-lg"></i>
+          <span>GitHub</span>
+        </a>
       </li>
       <li>
-        <a class="link" href="https://blog.stevanfreeborn.com">Blog</a>
+        <a class="link" href="https://blog.stevanfreeborn.com">
+          <i class="fa-solid fa-square-rss fa-lg"></i>
+          <span>Blog</span>
+        </a>
       </li>
       <li>
-        <a class="link" href="https://linkedin.stevanfreeborn.com">LinkedIn</a>
+        <a class="link" href="https://linkedin.stevanfreeborn.com">
+          <i class="fa-brands fa-square-linkedin fa-lg"></i>
+          <span>LinkedIn</span>
+        </a>
       </li>
     </ul>
   </nav>
