--- a/internal/assets/templates/index.gohtml
+++ b/internal/assets/templates/index.gohtml
@@ -9,6 +9,7 @@
     integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link href="css/style.css" rel="stylesheet">
+  <link rel="icon" type="image/x-icon" href="images/favicon.ico">
 </head>
 
 <body>
@@ -18,35 +19,20 @@
       alt="A man with short brown hair, a grey hoodie, and a white t-shirt smiles at the camera. He has a white earbud in his left ear. The background is a blurred office setting with warm lighting visible through glass partitions." />
     <div class="bio">
       <h1>Stevan Freeborn</h1>
-      <p>I'm a {{ .Age }}-year old dad of 2 who enjoys drinking coffee, lifting weights, and solving problems with code.</p>
+      <p>I'm a {{ .Age }}-year old dad of 2 who enjoys drinking coffee, lifting weights, and solving problems with code.
+      </p>
     </div>
   </div>
   <nav class="links-container">
     <ul>
+      {{ range .Links }}
       <li>
-        <a class="link" href="https://youtube.stevanfreeborn.com">
-          <i class="fa-brands fa-square-youtube fa-lg"></i>
-          <span>YouTube</span>
+        <a class="link" href="{{ .Href }}">
+          <i class="{{ .Icon }}"></i>
+          <span>{{ .Text }}</span>
         </a>
       </li>
-      <li>
-        <a class="link" href="https://github.stevanfreeborn.com">
-          <i class="fa-brands fa-square-github fa-lg"></i>
-          <span>GitHub</span>
-        </a>
-      </li>
-      <li>
-        <a class="link" href="https://blog.stevanfreeborn.com">
-          <i class="fa-solid fa-square-rss fa-lg"></i>
-          <span>Blog</span>
-        </a>
-      </li>
-      <li>
-        <a class="link" href="https://linkedin.stevanfreeborn.com">
-          <i class="fa-brands fa-square-linkedin fa-lg"></i>
-          <span>LinkedIn</span>
-        </a>
-      </li>
+      {{ end }}
     </ul>
   </nav>
 
