fix: set target attribute on links to _blank

--- a/internal/assets/templates/index.gohtml
+++ b/internal/assets/templates/index.gohtml
@@ -24,7 +24,11 @@
   <nav class="links-container">
     <ul>
       <li>
-        <a class="link" href="https://youtube.stevanfreeborn.com">
+        <a
+          target="_blank"
+          class="link" 
+          href="https://youtube.stevanfreeborn.com"
+        >
           <i class="fa-brands fa-square-youtube fa-lg"></i>
           <span>YouTube</span>
         </a>
