fix: open links in new tab

--- a/internal/assets/templates/index.gohtml
+++ b/internal/assets/templates/index.gohtml
@@ -27,7 +27,7 @@
     <ul>
       {{ range .Links }}
       <li>
-        <a class="link" href="{{ .Href }}">
+        <a class="link" href="{{ .Href }}" target="_blank">
           <i class="{{ .Icon }}"></i>
           <span>{{ .Text }}</span>
         </a>
