--- a/internal/assets/css/style.css
+++ b/internal/assets/css/style.css
@@ -76,6 +76,7 @@ body {
   flex-direction: column;
   gap: 2rem;
   padding: 1rem;
+  padding-bottom: 0;
 }
 
 .image-container,
@@ -101,6 +102,7 @@ body {
 
 .links-container {
   flex: 1;
+  padding-bottom: 1rem;
 }
 
 .links-container ul {
